--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title>KFIP</title>
-</head>
-<body>
-    テスト
-</body>
-</html>
+{% extends '_base.html' %}
+{% load static %}
+
+{% block content %}
+<div class="d-flex align-items-center flex-column justify-content-center" style="height: 16rem;">
+    <h1>移転しました</h1>
+    <p>
+        テスト
+    </p>
+</div>
+<div class="container py-4">
+    テストテストテストテストテストテストテストテストテストテスト
+</div>
+{% endblock %}
