add background image

--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=M+PLUS+2&display=swap" rel="stylesheet">
   {% bootstrap_css %}
   <link type="text/css" rel="stylesheet" href="{% static 'css/_base.css' %}">
-  {% block extra_css %}
+  {% block extracss %}
   {% endblock %}
 
   {% bootstrap_javascript %}
