--- a/app/static/css/_base.css
+++ b/app/static/css/_base.css
@@ -5,8 +5,9 @@ html{
     height: 100%;
 }
 body{
-    min-height: 100%;
+    height: 100%;
 }
 main {
+    height: 100%;
     font-family: 'M PLUS 2', 'メイリオ', sans-serif;
 }
