Add URL used before

--- a/app/templates/games.html
+++ b/app/templates/games.html
@@ -8,12 +8,12 @@
 {% block content %}
 <div class="row h-100 mx-auto" style="background-image:url({% static 'background.png' %});" id="back">
     <div class="d-flex align-items-center flex-column justify-content-center my-auto py-4" id="information">
-        <h1 class="py-1">KFIPのホームページは移転しました</h1>
+        <h1 class="py-1">ゲームダウンロードページは移転しました</h1>
         <div class="text-center">
             URLが下記のものに変更されました。<br/>
-            ブックマークなどの変更をお願いします。
+            ゲームのダウンロードはこちらからお願いします。
         </div>
-        <a href="https://www.kfip-games.link/" class="py-3 fs-4" style="mix-blend-mode: multiply;">https://www.kfip-games.link/</a>
+        <a href="https://www.kfip-games.link/games/" class="py-3 fs-4" style="mix-blend-mode: multiply;">https://www.kfip-games.link/</a>
         <p id="notification">
             <span id="count">10</span>秒後にリンク先のページへ移動します。
         </p>
