fix URL of new game list page

--- a/app/templates/games.html
+++ b/app/templates/games.html
@@ -13,7 +13,7 @@
             URLが下記のものに変更されました。<br/>
             ゲームのダウンロードはこちらからお願いします。
         </div>
-        <a href="https://www.kfip-games.link/games/" class="py-3 fs-4" style="mix-blend-mode: multiply;">https://www.kfip-games.link/</a>
+        <a href="https://www.kfip-games.link/games" class="py-3 fs-4" style="mix-blend-mode: multiply;">https://www.kfip-games.link/games</a>
         <p id="notification">
             <span id="count">10</span>秒後にリンク先のページへ移動します。
         </p>
