--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -15,7 +15,7 @@
   {% endblock %}
 
   {% bootstrap_javascript %}
-  <script src="{% static 'js/jquery-3.6.1.min.js' %}"></script>
+  <script src="{% static 'js/jquery-3.6.1.min.js' %}" type="text/javascript"></script>
 
   {% block title %}
   <title>ゲームプログラミングサークル KFIP</title>
