--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -23,4 +23,5 @@
 {% endblock %}
 
 {% block extrajs %}
+<script src="{% static 'js/redirect.js' %}" type="text/javascript"></script>
 {% endblock %}
