change getElements method from tag name to id

--- a/app/templates/top.html
+++ b/app/templates/top.html
@@ -13,7 +13,7 @@
             URLが下記のものに変更されました。<br/>
             ブックマークなどの変更をお願いします。
         </div>
-        <a href="https://www.kfip-games.link/" class="py-3 fs-4" style="mix-blend-mode: multiply;">https://www.kfip-games.link/</a>
+        <a href="https://www.kfip-games.link/" class="py-3 fs-4" style="mix-blend-mode: multiply;" id="link">https://www.kfip-games.link/</a>
         <p id="notification">
             <span id="count">5</span>秒後にリンク先のページへ移動します。
         </p>
